@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-22T16:29:13Z",
+  "timestamp" : "2022-07-25T01:48:28Z",
   "count_outdated" : 280,
   "uniques_outdated" : 168,
-  "count" : 287,
-  "uniques" : 174,
+  "count" : 288,
+  "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-07-12T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 4, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
