@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 8,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-07-12T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
